--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body>
     <h1>Hello Ama</h1>
     <button id="btnCreate">New Game</button>
+    <button id="btnJoin">Join Game</button>
+    <input type="text" id="txtGameId"/>
+  
     <script>
       // HTML elements
       let clientId = null;
@@ -17,6 +20,22 @@
       let ws = new WebSocket("ws://localhost:9090");
 
       const btnCreate = document.getElementById("btnCreate");
+      const btnJoin = document.getElementById("btnJoin");
+      const txtGameId = document.getElementById("txtGameId");
+
+      //  wiring buttons
+      btnJoin.addEventListener("click",(e) => {
+        if (gameId  === null)
+            gameId = txtGameId.value
+
+            const payLoad = {
+              "method": "join",
+              "clientId": clientId,
+              "gameId": gameId
+            }
+
+            ws.send(JSON.stringify(payLoad));
+      })
 
       btnCreate.addEventListener("click", (e) => {
         const payLoad = {
@@ -39,9 +58,9 @@
 
         // create
         if (response.method === "create") {
-          gameId = response.clientId;
+          gameId = response.game.id;
           console.log(
-            "game successfully created with id" +
+            "game successfully created with id " +
               response.game.id +
               "with" +
               response.game.balls +
