--- a/index.html
+++ b/index.html
@@ -11,17 +11,25 @@
     <button id="btnCreate">New Game</button>
     <button id="btnJoin">Join Game</button>
     <input type="text" id="txtGameId"/>
+    <div id="divPlayers"></div>
+    <div id="divBoard"></div>
+
   
     <script>
       // HTML elements
       let clientId = null;
       let gameId = null;
+      let playerColor = null;
 
       let ws = new WebSocket("ws://localhost:9090");
 
       const btnCreate = document.getElementById("btnCreate");
       const btnJoin = document.getElementById("btnJoin");
       const txtGameId = document.getElementById("txtGameId");
+      const divPlayers = document.getElementById("divPlayers");
+      const divBoard = document.getElementById("divBoard");
+
+
 
       //  wiring buttons
       btnJoin.addEventListener("click",(e) => {
@@ -50,6 +58,17 @@
         // message.data
         const response = JSON.parse(message.data);
 
+        // update
+        if(response.method === "update"){
+          // {1: "red"}
+          if(!response.game.state) return;
+          for(const b of Object.keys(response.game.state)){
+            const color = response.game.state[b];
+            const ballObject = document.createElement("ball" + b);
+            ballObject.style.backgroundColor = color
+          }
+        }
+
         // connect
         if (response.method === "connect") {
           clientId = response.clientId;
@@ -62,10 +81,55 @@
           console.log(
             "game successfully created with id " +
               response.game.id +
-              "with" +
+              " with" +
               response.game.balls +
               " cells"
           );
+        }
+
+        // join
+        if (response.method === "join") {
+          const game = response.game;
+
+          while(divPlayers.firstChild)
+            divPlayers.removeChild(divPlayers.firstChild);
+
+          game.clients.forEach(client =>{
+            const d = document.createElement("div");
+            d.style.width = "200px";
+            d.style.background = client.color
+            d.textContent = client.clientId;
+            divPlayers.appendChild(d);
+
+            if(client.clientId === clientId) playerColor = client.color;
+          })
+
+          while(divBoard.firstChild)
+          divBoard.removeChild(divBoard.firstChild);
+
+          for(let i= 0; i < game.balls; i++){
+
+            const b = document.createElement("button");
+            b.id = "ball" + (i + 1);
+            b.tag = i+1
+            b.textContent = i+1
+            b.style.width = "150px";
+            b.style.height = "150px";
+            b.addEventListener("click",(e) => {
+              b.style.background = playerColor
+              const payLoad = {
+                "method": "play",
+                "clientId": clientId,
+                "gameId": gameId,
+                "ballId": b.tag,
+                "color": playerColor
+              }
+
+              ws.send(JSON.stringify(payLoad))
+            })
+            divBoard.appendChild(b)
+          }
+          
         }
       };
     </script>
